--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "web-vitals": "^2.1.2"
   },
   "scripts": {
-    "start": "craco start",
+    "start": "node index.js",
+    "heroku-postbuild": "cd client && npm install && npm run build",
     "build": "craco build",
     "test": "craco test",
     "eject": "react-scripts eject"
