--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-query": "^3.34.7",
-    "react-scripts": "5.0.0",
+    "react-scripts": "^4.0.3",
     "recharts": "^2.1.8",
     "web-vitals": "^2.1.2"
   },
